objects/vlocity_cmt__OmniScript__c.object
<CustomObject>
    <description>Represents a Vlocity OmniScript. Each Vlocity OmniScript is a declarative script that defines a task-based, guided user process enabling users to get work done efficiently and effectively. OmniScripts can be configured to pull data from Salesforce or any other data source via business services and can execute any business service to launch and interact with server-side business process engines.</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomJavaScript__c</fullName>
        <label>Custom JavaScript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataRaptor Bundle</label>
        <referenceTo>vlocity_cmt__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity OmniScripts</relationshipLabel>
        <relationshipName>VlocityOmniScripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DataRaptorBundleName__c</fullName>
        <formula>vlocity_cmt__DataRaptorBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsReusable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reusable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSON_Output__c</fullName>
        <label>JSON Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PropertySet__c</fullName>
        <label>Property Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Building Permit</fullName>
                </value>
                <value>
                    <fullName>Change Address</fullName>
                </value>
                <value>
                    <fullName>Change Payment Method</fullName>
                </value>
                <value>
                    <fullName>Check Status</fullName>
                </value>
                <value>
                    <fullName>Class Exercise</fullName>
                </value>
                <value>
                    <fullName>Close Case</fullName>
                </value>
                <value>
                    <fullName>Contact Prefill</fullName>
                </value>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Appreciation Offer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Get Account Data</fullName>
                </value>
                <value>
                    <fullName>Get Case Data</fullName>
                </value>
                <value>
                    <fullName>Get Communication Preferences Data</fullName>
                </value>
                <value>
                    <fullName>Get Customer Data</fullName>
                </value>
                <value>
                    <fullName>Guided Selling</fullName>
                </value>
                <value>
                    <fullName>Guide Me</fullName>
                </value>
                <value>
                    <fullName>Gun Permit</fullName>
                </value>
                <value>
                    <fullName>Marriage License</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>New Case</fullName>
                </value>
                <value>
                    <fullName>New Task</fullName>
                </value>
                <value>
                    <fullName>Outcome</fullName>
                </value>
                <value>
                    <fullName>Payment Extension</fullName>
                </value>
                <value>
                    <fullName>Product Feedback</fullName>
                </value>
                <value>
                    <fullName>Save Contact Data</fullName>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Term Life Quote</fullName>
                </value>
                <value>
                    <fullName>Troubleshoot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TestHTMLTemplates__c</fullName>
        <label>Test custom HTML templates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>DataRaptor Extract</fullName>
                </value>
                <value>
                    <fullName>Healthy Start</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>OmniScripts</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity OmniScript</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllCustom</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__SubType__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__Version__c</columns>
        <columns>vlocity_cmt__Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllCustom</label>
    </listViews>
    <nameField>
        <label>OmniScript Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScript</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>